--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "module": "commonjs",
         "esModuleInterop": true,
-        "target": "es2017",
+        "target": "es2016",
         "noImplicitAny": false,
         "moduleResolution": "node",
         "sourceMap": false,
@@ -12,6 +12,6 @@
             "*": ["node_modules/*", "src/types/*"]
         }
     },
-    "include": ["src/**/*"],
+    "include": ["**/*"],
     "exclude": ["node_modules", "**/*.spec.ts"]
 }
