--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "connex-entities",
+  "name": "@decent-bet/connex-entities",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
