--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@decent-bet/connex-entities",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "directories": {
     "lib": "lib"
   },
