fix: any check in class decorator

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "module": "commonjs",
         "esModuleInterop": true,
         "target": "es2016",
-        "noImplicitAny": false,
+        "noImplicitAny": true,
         "moduleResolution": "node",
         "sourceMap": false,
         "outDir": "lib",
